# project

./: .gitignore  CMakeLists.txt  COMP3320Project.sln  README.md  controls.cpp  cow.blend  main.cpp  vs_code_setup.md
COMP3320Project/COMP3320Project/: COMP3320Project.vcxproj  COMP3320Project.vcxproj.filters
PBRtest/: PBRtest.sln  PBRtest.vcxproj  PBRtest.vcxproj.filters  main.cpp  pbr.frag  pbr.vert
PBRtest/Debug/: PBRtest.exe.recipe  PBRtest.ilk  PBRtest.vcxproj.FileListAbsolute.txt  vc143.idb
PBRtest/models/: cow.mtl
TODO/: main_minimal.cpp
open_gl/: .gitignore  CMakeLists.txt  controls.cpp  glad.c  main.cpp  shader.h  texture_loader.cpp  texture_loader.h
open_gl/shaders/: fragment_shader.frag  vertex_shader.vert
src/: Cow_Character.cpp  Cow_Character.h  ExhaustSystem.cpp  ExhaustSystem.h  Giraffe_Character.cpp  Giraffe_Character.h  QuadRenderer.cpp  QuadRenderer.h  TextRenderer.cpp  TextRenderer.h  car.cpp  car.hpp  controls.cpp  controls.hpp  cow.cpp  cow.hpp  cubemap.cpp  cubemap.hpp  display.cpp  display.h  environment.cpp  environment.hpp  globals.cpp  globals.h  globals.hpp  ground.blend  hitbox.cpp  hitbox.hpp  main.cpp  material.hpp  math.h  mesh.cpp  mesh.hpp  model.cpp  model.hpp  model_texture.h  ogldev_basic_glfw_camera.cpp  ogldev_glfw.cpp  ogldev_util.cpp  renderScene.cpp  (+7 more)
src/include/: ogldev_array_2d.hpp  ogldev_basic_glfw_camera.hpp  ogldev_glfw.hpp  ogldev_math_3d.hpp  ogldev_types.hpp  ogldev_util.hpp
src/models/: Big_Rocks.blend  Big_Rocks.blend1  Small_Rock.blend  Small_Rock.blend1  Tree.blend  big_rock.mtl  car.mtl  cow.blend  cow.mtl  ground.blend1  ground.mtl  new_giraffe.mtl  object.h  raw_model.h  small_rock.mtl  textured_model.h  tree.mtl
src/shaders/: fragment.glsl  fragmentShader.glsl  fragment_shader.frag  light.vert  obj_fragment_shader.frag  (+17 more)
(+33 files in other folders)
